[gd_scene load_steps=5 format=2]

[ext_resource path="res://map/wall1.png" type="Texture" id=1]
[ext_resource path="res://map/DestructibleWall.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.0
height = 78.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 24 )

[node name="DestructibleWall" type="StaticBody2D" groups=[
"walls",
]]
collision_mask = 7
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -9 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -24 )
texture = ExtResource( 1 )

[node name="BehindDetector" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="BehindDetector"]
position = Vector2( 0, -24 )
shape = SubResource( 2 )

[node name="Target" type="Position2D" parent="."]
position = Vector2( 0, -12 )
[connection signal="body_entered" from="BehindDetector" to="." method="_on_BehindDetector_body_entered"]
[connection signal="body_exited" from="BehindDetector" to="." method="_on_BehindDetector_body_exited"]
